# MyOS1

./: .hgignore  Boot.asm  Ipl.asm  Makefile  Makefile.am  Makefile.cygwin  bootstrap.sh  configure.ac  setup.sh
BootLoader/: Makefile.am  Makefile.cygwin
BootLoader/bootsector/: BootSector.S  LinkerScript  Makefile.am  Makefile.cygwin
BootLoader/common/: Console32.S  Fat12Bpb.inc  FileSystemFat12.S  FloppyDisk.S  WriteString16.S
BootLoader/initloader/: EntryPoint.S  LinkerScript  Makefile.am  Makefile.cygwin  ProtectMode.S  StartKernel.S
assembly/: Ipl.ls  Makefile  Makefile.cygwin
assembly/bootsector/: BootSector.S  BootSector.s  Makefile.cygwin
assembly/common/: Console.s  Console32.S  Fat12Bpb.inc  FileSystemFat12.S  FloppyDisk.S  ReadFat12.s  WriteString16.S
assembly/ipl/: EnableA20.s  EntryPoint.S  Ipl.ls  IplStart.s  Makefile  Makefile.cygwin  ProtectMode.S  SetupGdt.s  StartKernel.S  StartMain.s
assembly16/: BootSector.asm  EnableA20.asm  Fat12Bpb.inc  ReadFat12.asm  ReadFloppy.asm  SetupGdt.asm  WriteString.asm
bootsector/: Binary.ls  BootSector.s  Makefile  ReadFat12.s  ReadFloppy.s  WriteString.s
data/: Makefile.am  Makefile.cygwin
include/: BootInfo.h  Descriptors.h  MemoryMap.h
include/common/: Descriptors.h  MemoryMap.h
kernel/: InterruptEntries.S  InterruptHandlers.c  Kernel0.ls  KernelEntry.S  KernelEntry.s  KernelMain.c  Makefile  Makefile.cygwin  SetupInterrupt.c  SetupSegment.S
src/: Makefile.am  Makefile.cygwin
src/initkernel/: InitPIC.S  InterruptEntries.S  InterruptHandlers.c  KernelEntry.S  KernelMain.c  LinkerScript  Makefile.am  Makefile.cygwin  SetupDescriptor.c  SetupInterrupt.c  SetupSegment.S
