
##
##    List of Programs.
##

##
##    List of Files.
##

FONT_ASCII       =  Ascii.fnt

##
##    Environments.
##

SYSDEV_FLOPPY    =  /proc/sys/Device/ImDisk0
CPDEST_FLOPPY    =  /cygdrive/a/
AS_CMN_DIR       = ../assembly/common

##
##    Commands.
##

AS      =  /usr/bin/i686-pc-linux-gnu-as
CC      =  /usr/bin/i686-pc-linux-gnu-gcc
LD      =  /usr/bin/i686-pc-linux-gnu-ld
CP      =  cp
DD      =  dd

##
##    Compile and Link Flags.
##

##
##    List of Installs.
##

##
##    Build Programs.
##

##
##    Install Programs.
##

##
##    Install Data.
##

install  :  $(FONT_ASCII)
	$(CP)  -pv  $^  $(CPDEST_FLOPPY)

